# robots_industries

./: README.md  pyproject.toml
robots_industries/: factory.py
tests/: test_robots_industries.py
